# runtimesave

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  versions.properties
agent/: build.gradle.kts
agent/src/main/java/com/github/sulir/runtimesave/: Database.java  ProgramStarter.java
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/: ShadowJarExtensions.kt  java-agent.gradle.kts
collect/: CMakeLists.txt  CMakePresets.json  build.gradle.kts
collect/src/: agent.c  agent.cpp  agent.hpp  buffer.cpp  buffer.hpp  classes.cpp  classes.hpp  common.hpp  frame.cpp  frame.hpp  heap.cpp  heap.hpp  locals.cpp  locals.hpp  location.cpp  location.hpp
gradle/: libs.versions.toml
graph/: build.gradle.kts
graph/src/main/java/com/github/sulir/runtimesave/: SourceLocation.java
graph/src/main/java/io/github/sulir/runtimesave/: MismatchException.java  SourceLocation.java  UncheckedThrowing.java
instrument/: build.gradle.kts
plugin/: build.gradle.kts
plugin/src/main/java/com/github/sulir/runtimesave/: Database.java  HelperRunConfigExtension.java  JdiFrameLoader.java  JdiFrameSaver.java  JdiLoader.java  JdiSaver.java  MismatchException.java  ObjectMapper.java  RuntimePersistenceService.java  RuntimeStorageService.java  SourceLocation.java  StartProgramAction.java  StartupActivity.java  StatePersistence.java  UncheckedThrowing.java
plugin/src/main/resources/: messages.properties
plugin/src/main/resources/messages/: Bundle.properties
scripts/: compare-db-size.sh
shared/: build.gradle.kts
starter/: build.gradle.kts
(+292 files in other folders)
